--- a/payeredge.html
+++ b/payeredge.html
@@ -13,7 +13,7 @@
       --bg:#090e16;--bg-elev:#0c1320;--fg:#eaf1ff;--muted:#9fb0c9;--line:#263448;--accent:#72a8ff;--accent-2:#7be0c3;
       --tier-best:#ffd166;--tier-better:#a9c2ff;--tier-good:#7be0c3;
       --shadow-lg:0 18px 40px rgba(0,0,0,.35);--shadow-md:0 10px 26px rgba(0,0,0,.28);
-      --radius:18px;
+      --radius:18px;--radius-sm:12px;
     }
     *{box-sizing:border-box} html,body{height:100%}
     body{
@@ -56,40 +56,47 @@
     .caption{color:var(--muted);font-size:12px} .svc{font-weight:800;color:var(--accent-2)}
 
     /* --- Table & cells --- */
-    table.bundle{width:100%;border-collapse:collapse;margin-top:8px;table-layout:fixed}
-    th,td{border-bottom:1px dashed #203043;padding:8px 6px;font-size:12px;vertical-align:top}
-    th{color:var(--muted);font-weight:700;line-height:1.15;overflow:visible;text-overflow:clip}
+    table{width:100%;border-collapse:collapse;margin-top:8px;table-layout:fixed}
+    th,td{
+      border-bottom:1px dashed #203043;
+      padding:8px 6px;
+      text-align:left;
+      font-size:12px;
+      vertical-align:top;
+    }
+    th{
+      color:var(--muted);
+      font-weight:700;
+      line-height:1.15;
+      white-space:normal;
+      overflow:visible;
+      text-overflow:clip;
+    }
     td{overflow:hidden;text-overflow:ellipsis}
 
-    /* column behavior */
-    .th-money{white-space:nowrap;text-align:right}
-    .cell-code{white-space:nowrap}
     .cell-item{line-height:1.28;padding-bottom:2px}
     .cell-item .label{
-      display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;font-size:.95em;
+      display:-webkit-box;
+      -webkit-line-clamp:2;            /* clamp to 2 lines (desktop) */
+      -webkit-box-orient:vertical;
+      overflow:hidden;
+      font-size:.95em;                  /* tiny shrink to free width */
     }
-    @media (min-width:1200px){ .cell-item .label{-webkit-line-clamp:3} }
+    @media (min-width:1200px){
+      .cell-item .label{-webkit-line-clamp:3} /* allow 3 lines on wide screens */
+    }
+    .cell-code{white-space:nowrap}
 
     .cell-money{
-      white-space:nowrap;font-weight:800;
-      font-size:clamp(11px,1.05vw,13px);
-      overflow:visible;text-overflow:clip;
-      padding-left:16px;padding-right:2px;
-      text-align:right;                 /* ← key: money right-aligned */
+      white-space:nowrap;               /* never wrap dollars */
+      font-weight:800;
+      font-size:clamp(11px,1.05vw,13px);/* slight downscale at mid widths */
+      overflow:visible;                 /* never ellipsize dollars */
+      text-overflow:clip;
+      padding-left:10px;                /* breathing room between columns */
     }
 
-    /* enforce money-column right alignment even if classes are missed */
-    .bundle td:nth-child(3), .bundle th:nth-child(3),
-    .bundle td:nth-child(4), .bundle th:nth-child(4),
-    .bundle td:nth-child(5), .bundle th:nth-child(5){ text-align:right }
-
-    /* minimal column separation feeling without drawing lines */
-    .bundle td:nth-child(n+3){ /* money columns */
-      /* optional: subtle left shadow for visual gutter */
-      box-shadow: -6px 0 0 -5px rgba(32,48,67,.35) inset;
-    }
-
-    /* breakdown block */
+    /* Inline breakdown (collapsible) */
     details.break{margin:2px 0 8px}
     details.break > summary{list-style:none;cursor:pointer;display:flex;align-items:center;gap:8px;color:#cfe6ff;font-weight:600}
     details.break > summary::before{content:'▸';font-size:12px;transform:translateY(1px);opacity:.85}
@@ -99,7 +106,7 @@
     .hdr{color:var(--muted);font-weight:600;font-size:11px}
     .codepill{display:inline-flex;align-items:center;justify-content:center;padding:2px 8px;border:1px solid var(--line);border-radius:999px;
       font-family:ui-monospace,Menlo,Consolas,monospace;font-size:11px;color:#cfe6ff;background:#0e1a30;white-space:nowrap;max-width:84px;overflow:hidden;text-overflow:ellipsis}
-    .money{white-space:nowrap;font-weight:800;font-size:clamp(10px,1vw,12px);text-align:right}
+    .money{white-space:nowrap;font-weight:800;font-size:clamp(10px,1vw,12px)}
 
     /* ===== Mobile ===== */
     @media (max-width: 1280px){
@@ -107,14 +114,14 @@
       .cell-money{font-size:12px}
     }
     @media (max-width: 900px){
-      .stack{grid-template-columns:1fr}
+      .stack{grid-template-columns:1fr}            /* vertical stack */
       .viewport-frame{transform:none !important;width:100% !important}
       header{position:static}
       .hero{font-size:32px}
-      table.bundle{table-layout:auto}
+      table{table-layout:auto}
       .cell-money{font-size:13px}
     }
-    @media (max-width:560px){
+    @media (max-width: 560px){
       body{font-size:14px}
       .hero{font-size:28px}
       th,td{padding:7px 6px}
@@ -173,9 +180,9 @@
 </main>
 
 <script>
-/* include guard */
-if(!window.__PAYEREDGE_UI16_6_PRO_TIGHT__){
-window.__PAYEREDGE_UI16_6_PRO_TIGHT__=true;
+/* single include guard */
+if(!window.__PAYEREDGE_UI16_5_TIGHT__){
+window.__PAYEREDGE_UI16_5_TIGHT__=true;
 
 /* ---------- helpers ---------- */
 const CSV_CANDIDATES=['./vsp_choice_master_v8.4.csv','./data/vsp_choice_master_v8.4.csv'];
@@ -251,7 +258,7 @@ async function loadCSV(){
   let loaded=null;
   for(const url of CSV_CANDIDATES){ const r=await tryFetch(url); if(r.ok){ loaded=r; break; } }
   if(loaded){
-    const meta={plan:'VSP_choice',version:new Date().toISOString().slice(0,10)+'.ui16.6-pro-tight',source:'network:'+loaded.url,sha:quickHash(loaded.text)};
+    const meta={plan:'VSP_choice',version:new Date().toISOString().slice(0,10)+'.ui16.5-tight',source:'network:'+loaded.url,sha:quickHash(loaded.text)};
     setCache(loaded.text,meta); DATA=parseCSV(loaded.text); buildSimpleIndex(); renderMeta(DATA.length,meta);
     status.textContent=` [ok] ${loaded.url} • ${DATA.length} rows`; computeBundles(); return;
   }
@@ -386,7 +393,7 @@ function computeBundles(){
       const name=N(r.enhancement);
       if(wantGlass && !isGlassName(name)) return false;
       if(!wantGlass && isGlassName(name)) return false;
-      if(/custom\s*measure/i.test(name)) return false;
+      if(isCustomMeasure(r)) return false;
       if(tintSel==='polarized') return /polariz/.test(name);
       return !/(photochrom|polariz|tint|tinted|sunglass|gradient|color|colored)/.test(name);
     });
@@ -508,13 +515,8 @@ function breakdownDetails(li,rowKey){
 
 function renderTier({name,cls,b}){
   const div=document.createElement('div'); div.className='tier';
-  if(!b){
-    div.innerHTML=`<div class="tierHead"><div class="stars ${cls}">
-      <span>${name==='Best'?'★★★':name==='Better'?'★★':name==='Good'?'★':'◎'}</span>
-      <span class="sub" style="margin-left:8px">${name}</span></div>
-      <div class="figures"><div class="hero">—</div><div class="caption">Patient Copay</div></div></div>
-      <div class="sub">No viable bundle</div>`; return div;
-  }
+  if(!b){ div.innerHTML=`<div class="tierHead"><div class="stars ${cls}"><span>${name==='Best'?'★★★':name==='Better'?'★★':name==='Good'?'★':'◎'}</span><span class="sub" style="margin-left:8px">${name}</span></div>
+    <div class="figures"><div class="hero">—</div><div class="caption">Patient Copay</div></div></div><div class="sub">No viable bundle</div>`; return div; }
   const stars=name==='Best'?'★★★':name==='Better'?'★★':name==='Good'?'★':'◎';
 
   const head=`<div class="tierHead">
@@ -539,21 +541,16 @@ function renderTier({name,cls,b}){
     return main+parts;
   }).join('');
 
-  div.innerHTML=head+`<table class="bundle">
+  div.innerHTML=head+`<table>
+    <!-- desktop widths; mobile relaxes via media query -->
     <colgroup>
-      <col style="width:38%"><!-- Item -->
+      <col style="width:40%"><!-- Item (clamped) -->
       <col style="width:10%"><!-- Code -->
-      <col style="width:17%"><!-- Copay -->
-      <col style="width:17%"><!-- Holdback -->
+      <col style="width:16%"><!-- Copay -->
+      <col style="width:16%"><!-- Holdback -->
       <col style="width:18%"><!-- Service Fee -->
     </colgroup>
-    <thead><tr>
-      <th>Item</th>
-      <th>Code</th>
-      <th class="th-money">Copay</th>
-      <th class="th-money">Holdback</th>
-      <th class="th-money">Service Fee</th>
-    </tr></thead>
+    <thead><tr><th>Item</th><th>Code</th><th>Copay</th><th>Holdback</th><th>Service Fee</th></tr></thead>
     <tbody>${lines}</tbody>
     <tfoot><tr><th colspan="2" style="text-align:right">Totals</th>
       ${tdMoney(b.copay,`${name}-tot-c`)}${tdMoney(b.chargeback,`${name}-tot-cb`)}${tdMoney(b.profit,`${name}-tot-pr`)}
@@ -570,7 +567,7 @@ function renderStack(rows){
 function fitViewportScale() {
   const frame = document.getElementById('frame'); if (!frame) return;
   const vw = document.documentElement.clientWidth;
-  if (vw <= 900){ frame.style.transform = 'none'; frame.style.width = '100%'; return; }
+  if (vw <= 900){ frame.style.transform = 'none'; frame.style.width = '100%'; return; }  // mobile: no scaling
   const needed = 360*4 + 14*3; let scale = Math.min(1, vw / needed); if (scale < 0.82) scale = 0.82;
   frame.style.transform = `scale(${scale})`; frame.style.width = (100 / scale) + '%';
 }
@@ -600,7 +597,7 @@ function animateMoney(duration = 350) {
   const start = performance.now();
   (function step(ts){
     const t = Math.min(1, (ts - start) / duration);
-    const k = 1 - Math.pow(1 - t, 3);
+    const k = 1 - Math.pow(1 - t, 3); // easeOutCubic
     frames.forEach(({ n, fromVal, toVal }) => {
       const v = fromVal + (toVal - fromVal) * k;
       n.textContent = '$' + v.toFixed(2);
